--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 Plugin Slideshow Screensaver Changelog
 
-Current Version : 0.0.10
+Current Version : 0.0.11
+
+** 0.0.11 ***
+
+Fix for format in settings not affecting output
 
 ** 0.0.10 ***
 
