Now works with plugins that don't use default.py Remove log spam Version bump

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
 Plugin Slideshow Screensaver Changelog
 
-Current Version : 0.0.11
+** 0.0.12 ***
+
+Now works with plugins that don't use default.py
 
 ** 0.0.11 ***
 
@@ -38,7 +40,7 @@ Rename xbmcplugin.py to fakexbmcplugin.py (thought I already did that, hmm...)
 
 Added option in settings 'Show Titles (If Available)'
 Error indicator and message now moves randomly about screen (this is a screensaver, not a screen burner =] )
-Added option in settings under 'Slideshow On XBMC Startup': 'Normal XBMC Slideshow (Plugins Only)'. When checked and path is a plugin, will start with an xbmc slideshow (old behavior). If unchecked (default) will start with the normal screensaver behavior. 
+Added option in settings under 'Slideshow On XBMC Startup': 'Normal XBMC Slideshow (Plugins Only)'. When checked and path is a plugin, will start with an xbmc slideshow (old behavior). If unchecked (default) will start with the normal screensaver behavior.
 
 ** 0.0.4 ***
 
