Fixes for errors with some plugins Convert from tabs to spaces Version bump

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
 Plugin Slideshow Screensaver Changelog
 
+** 0.0.13 ***
+
+Fixes for errors with some plugins
+
 ** 0.0.12 ***
 
 Now works with plugins that don't use default.py
