--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
 Plugin Slideshow Screensaver Changelog
 
+** 0.0.15 ***
+
+Fix for source path not being selectable on Helix
+
 ** 0.0.14 ***
 
 Fix for modules not being added to import path on Helix causing import errors
